--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -8,9 +8,9 @@
 # Application Configuration
 # ============================================
 NODE_ENV=production
-APP_BASE_URL=https://yourdomain.com
-DOMAIN=yourdomain.com
-LETSENCRYPT_EMAIL=admin@yourdomain.com
+APP_BASE_URL=https://bemypcp.com
+DOMAIN=bemypcp.com
+LETSENCRYPT_EMAIL=admin@bemypcp.com
 
 # ============================================
 # Database Configuration
@@ -100,8 +100,8 @@ RATE_LIMIT_MAX_REQUESTS=100
 # ============================================
 # CORS Configuration
 # ============================================
-FRONTEND_URL=https://yourdomain.com
-CORS_ORIGIN=https://yourdomain.com
+FRONTEND_URL=https://bemypcp.com
+CORS_ORIGIN=https://bemypcp.com
 
 # ============================================
 # Email Configuration (if needed)
