--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -14,17 +14,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh:ro
     command: >
-      postgres
-      -c ssl=on
-      -c ssl_cert_file=/var/lib/postgresql/data/server.crt
-      -c ssl_key_file=/var/lib/postgresql/data/server.key
-      -c ssl_ca_file=/var/lib/postgresql/data/ca.crt
-      -c log_connections=on
-      -c log_disconnections=on
+      postgres -c ssl=on -c ssl_cert_file=/var/lib/postgresql/data/certs/server.crt -c ssl_key_file=/var/lib/postgresql/data/certs/server.key -c ssl_ca_file=/var/lib/postgresql/data/certs/ca.crt -c log_connections=on -c log_disconnections=on
     networks:
       - emr-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-emr_user} -d ${DB_NAME:-emr_db}"]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-emr_user} -d ${DB_NAME:-emr_db}" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -68,7 +62,7 @@ services:
       - api_logs:/app/logs
       - uploads:/app/uploads
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: [ "CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -106,7 +100,7 @@ services:
       - web
       - api
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/"]
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -128,4 +122,3 @@ volumes:
 networks:
   emr-network:
     driver: bridge
-
