--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -12,9 +12,10 @@ services:
       POSTGRES_INITDB_ARGS: "-E UTF8"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - postgres_certs:/var/lib/postgresql/certs
       - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh:ro
     command: >
-      postgres -c ssl=on -c ssl_cert_file=/var/lib/postgresql/data/certs/server.crt -c ssl_key_file=/var/lib/postgresql/data/certs/server.key -c ssl_ca_file=/var/lib/postgresql/data/certs/ca.crt -c log_connections=on -c log_disconnections=on
+      postgres -c ssl=on -c ssl_cert_file=/var/lib/postgresql/certs/server.crt -c ssl_key_file=/var/lib/postgresql/certs/server.key -c ssl_ca_file=/var/lib/postgresql/certs/ca.crt -c log_connections=on -c log_disconnections=on
     networks:
       - emr-network
     healthcheck:
@@ -107,6 +108,8 @@ services:
 
 volumes:
   postgres_data:
+    driver: local
+  postgres_certs:
     driver: local
   api_logs:
     driver: local
