--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -1,7 +1,6 @@
 {
     # Global options
-    email admin@bemypcp.com
-    auto_https off
+    email {$EMAIL:admin@bemypcp.com}
 }
 
 # Force HTTPS redirect for all HTTP traffic
