--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -28,8 +28,8 @@ https://bemypcp.com {
         # Prevent clickjacking
         X-Frame-Options "DENY"
         
-        # Content Security Policy
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';"
+        # Content Security Policy - allow Google Fonts
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';"
         
         # Referrer policy
         Referrer-Policy "strict-origin-when-cross-origin"
@@ -45,12 +45,7 @@ https://bemypcp.com {
     handle /api/* {
         reverse_proxy api:3000 {
             header_up X-Real-IP {remote_host}
-            header_up X-Forwarded-For {remote_host}
-            header_up X-Forwarded-Proto {scheme}
             header_up Host {host}
-            health_uri /api/health
-            health_interval 30s
-            health_timeout 5s
         }
     }
 
@@ -66,10 +61,10 @@ https://bemypcp.com {
         output file /var/log/caddy/access.log
         format json
     }
-}
 
-# Health check endpoint (bypass security headers for monitoring)
-https://bemypcp.com/health {
-    respond 200
+    # Health check endpoint
+    handle /health {
+        respond 200
+    }
 }
 
