Remove sslmode from DATABASE_URL - SSL handled in db.js

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -31,7 +31,7 @@ services:
     environment:
       NODE_ENV: production
       PORT: 3000
-      DATABASE_URL: postgresql://${DB_USER:-emr_user}:${DB_PASSWORD}@db:5432/${DB_NAME:-emr_db}?sslmode=require
+      DATABASE_URL: postgresql://${DB_USER:-emr_user}:${DB_PASSWORD}@db:5432/${DB_NAME:-emr_db}
       FRONTEND_URL: ${APP_BASE_URL}
       # Encryption
       ENABLE_PHI_ENCRYPTION: ${ENABLE_PHI_ENCRYPTION}
