--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -49,6 +49,14 @@ https://bemypcp.com {
         }
     }
 
+    # Uploads (patient photos, documents, etc.) served by API
+    handle /uploads/* {
+        reverse_proxy api:3000 {
+            header_up X-Real-IP {remote_host}
+            header_up Host {host}
+        }
+    }
+
     # Serve static frontend (SPA)
     handle {
         root * /usr/share/caddy
