--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -51,6 +51,18 @@ https://bemypcp.com {
         reverse_proxy api:3000 {
             header_up X-Real-IP {remote_host}
             header_up Host {host}
+            # Health check and retry configuration
+            health_uri /api/health
+            health_interval 30s
+            health_timeout 5s
+            # Retry on failure
+            fail_duration 30s
+            max_fails 3
+            # Transport settings for better reliability
+            transport http {
+                dial_timeout 10s
+                response_header_timeout 30s
+            }
         }
     }
 
@@ -59,6 +71,11 @@ https://bemypcp.com {
         reverse_proxy api:3000 {
             header_up X-Real-IP {remote_host}
             header_up Host {host}
+            # Transport settings for better reliability
+            transport http {
+                dial_timeout 10s
+                response_header_timeout 30s
+            }
         }
     }
 
