--- a/deploy/Dockerfile.api
+++ b/deploy/Dockerfile.api
@@ -1,4 +1,3 @@
-# syntax=docker/dockerfile:1.4
 FROM node:18-alpine
 
 # Install build dependencies in one layer
@@ -16,9 +15,8 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies with BuildKit cache mount (faster rebuilds)
-RUN --mount=type=cache,target=/root/.npm \
-    npm ci --only=production --prefer-offline --no-audit --silent && \
+# Install dependencies (cache this layer - only rebuilds if package.json changes)
+RUN npm ci --only=production --prefer-offline --no-audit --silent && \
     npm cache clean --force
 
 # Remove build dependencies to reduce image size
