--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -1,4 +1,3 @@
-# syntax=docker/dockerfile:1.4
 # Build stage
 FROM node:18-alpine AS builder
 
@@ -7,16 +6,14 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies with BuildKit cache mount (faster rebuilds)
-RUN --mount=type=cache,target=/root/.npm \
-    npm ci --prefer-offline --no-audit --silent
+# Install dependencies (cache this layer - only rebuilds if package.json changes)
+RUN npm ci --prefer-offline --no-audit --silent
 
 # Copy source code
 COPY . ./
 
-# Build with cache mount for node_modules/.cache
-RUN --mount=type=cache,target=/app/node_modules/.cache \
-    npm run build
+# Build production bundle
+RUN npm run build
 
 # Production stage - serve with Caddy
 FROM caddy:2-alpine
