--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -30,6 +30,9 @@ services:
       # Enable BuildKit features for faster builds
       args:
         BUILDKIT_INLINE_CACHE: 1
+      # Use cache from previous builds
+      cache_from:
+        - deploy-api:latest
     container_name: emr-api
     restart: unless-stopped
     environment:
@@ -86,12 +89,22 @@ services:
       # Enable BuildKit features for faster builds
       args:
         BUILDKIT_INLINE_CACHE: 1
+      # Use cache from previous builds
+      cache_from:
+        - deploy-web:latest
     container_name: emr-web
     restart: unless-stopped
     networks:
       - emr-network
     volumes:
       - web_static:/usr/share/caddy
+    # Optimize container resources
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   caddy:
     image: caddy:2-alpine
