Stable release: Clock counter improvements, Docker optimizations, and bug fixes
- Removed prominent clock counter badge (timers remain next to status text)
- Optimized Docker builds with faster npm install
- Fixed Dockerfile issues for both web and API
- Improved build caching and performance
- All services stable and operational

--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -119,6 +119,22 @@ CORS_ORIGIN=https://bemypcp.com
 # SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
 
 # ============================================
+# ePrescribing (DoseSpot)
+# ============================================
+# EPRESCRIBE_PROVIDER can be 'dosespot' or 'internal'
+EPRESCRIBE_PROVIDER=dosespot
+
+# DoseSpot API configuration (fill from vendor portal)
+DOSESPOT_BASE_URL=https://api.dosespot.com
+DOSESPOT_CLIENT_ID=CHANGE_ME_DOSESPOT_CLIENT_ID
+DOSESPOT_CLIENT_SECRET=CHANGE_ME_DOSESPOT_CLIENT_SECRET
+DOSESPOT_CLINIC_ID=CHANGE_ME_DOSESPOT_CLINIC_ID
+DOSESPOT_WEBHOOK_SECRET=CHANGE_ME_WEBHOOK_SECRET
+
+# Enable EPCS (controlled substances) once vendor + Surescripts certification complete
+EPRESCRIBE_EPCS_ENABLED=false
+
+# ============================================
 # Notes
 # ============================================
 # 1. Generate strong secrets using:
