--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -33,14 +33,14 @@ https://bemypcp.com {
         # Prevent clickjacking
         X-Frame-Options "DENY"
         
-        # Content Security Policy - allow Google Fonts
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';"
+        # Content Security Policy - allow Google Fonts and blob images
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';"
         
         # Referrer policy
         Referrer-Policy "strict-origin-when-cross-origin"
         
         # Permissions policy
-        Permissions-Policy "geolocation=(), microphone=(), camera=()"
+        Permissions-Policy "geolocation=(), microphone=(), camera=(self)"
         
         # Remove server header
         -Server
