Fix photo upload loading state, improve error logging, and update CSP for blob/data support

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -34,7 +34,7 @@ https://bemypcp.com {
         X-Frame-Options "DENY"
         
         # Content Security Policy - allow Google Fonts and blob images
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://bemypcp.com; frame-ancestors 'none';"
         
         # Referrer policy
         Referrer-Policy "strict-origin-when-cross-origin"
