--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "otplib": "^12.0.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "qrcode": "^1.5.4",
     "redis": "^4.7.1",
