--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -70,6 +70,8 @@ services:
       DOSESPOT_CLINIC_ID: ${DOSESPOT_CLINIC_ID:-}
       DOSESPOT_WEBHOOK_SECRET: ${DOSESPOT_WEBHOOK_SECRET:-}
       EPRESCRIBE_EPCS_ENABLED: ${EPRESCRIBE_EPCS_ENABLED:-false}
+      # Platform Admin
+      SUPER_ADMIN_SECRET: ${SUPER_ADMIN_SECRET}
     depends_on:
       db:
         condition: service_healthy
