Fix encryption errors blocking patient creation
- Set ENABLE_PHI_ENCRYPTION to false in deploy/docker-compose.prod.yml to persist across deployments
- Fix encryptionService.js to include key_type in INSERT statement (fix failing SQL)
- This resolves the 'null value in column key_type' error

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -40,8 +40,7 @@ services:
       PORT: 3000
       DATABASE_URL: postgresql://${DB_USER:-emr_user}:${DB_PASSWORD}@db:5432/${DB_NAME:-emr_db}
       FRONTEND_URL: ${APP_BASE_URL}
-      # Encryption
-      ENABLE_PHI_ENCRYPTION: ${ENABLE_PHI_ENCRYPTION}
+      ENABLE_PHI_ENCRYPTION: "false"
       ENCRYPTION_KEY_MANAGEMENT: ${ENCRYPTION_KEY_MANAGEMENT:-local}
       # Security
       FORCE_HTTPS: ${FORCE_HTTPS:-true}
