--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -40,7 +40,7 @@ services:
       PORT: 3000
       DATABASE_URL: postgresql://${DB_USER:-emr_user}:${DB_PASSWORD}@db:5432/${DB_NAME:-emr_db}
       FRONTEND_URL: ${APP_BASE_URL}
-      ENABLE_PHI_ENCRYPTION: "false"
+      ENABLE_PHI_ENCRYPTION: ${ENABLE_PHI_ENCRYPTION:-true}
       ENCRYPTION_KEY_MANAGEMENT: ${ENCRYPTION_KEY_MANAGEMENT:-local}
       # Security
       FORCE_HTTPS: ${FORCE_HTTPS:-true}
@@ -51,6 +51,8 @@ services:
       # Logging
       ENABLE_AUDIT_LOGGING: ${ENABLE_AUDIT_LOGGING:-true}
       LOG_LEVEL: ${LOG_LEVEL:-info}
+      # Backups
+      BACKUP_ENCRYPTION_KEY: ${BACKUP_ENCRYPTION_KEY}
       # KMS (if using AWS/GCP/Azure)
       AWS_KMS_KEY_ID: ${AWS_KMS_KEY_ID:-}
       AWS_REGION: ${AWS_REGION:-}
