--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -32,9 +32,22 @@ http://bemypcp.com {
 # ================================================================
 https://pagemdemr.com, https://bemypcp.com {
     root * /usr/share/caddy
-
-    # Performance: Enable compression
     encode zstd gzip
+
+    # Performance: Cache static assets
+    @assets {
+        path /assets/*
+    }
+    header @assets Cache-Control "public, max-age=31536000, immutable"
+
+    # API and Uploads
+    handle /api/* {
+        reverse_proxy api:3000
+    }
+    handle /uploads/* {
+        header Cache-Control "private, max-age=3600"
+        reverse_proxy api:3000
+    }
 
     # Security headers
     header {
@@ -48,27 +61,7 @@ https://pagemdemr.com, https://bemypcp.com {
         -Server
     }
 
-    # Performance: Cache static assets (Vite generates hashed names)
-    header /assets/* Cache-Control "public, max-age=31536000, immutable"
-
-    # API reverse proxy
-    handle /api/* {
-        reverse_proxy api:3000 {
-            header_up X-Real-IP {remote_host}
-            header_up Host {host}
-        }
-    }
-
-    # Uploads
-    handle /uploads/* {
-        header Cache-Control "private, max-age=3600"
-        reverse_proxy api:3000 {
-            header_up X-Real-IP {remote_host}
-            header_up Host {host}
-        }
-    }
-
-    # Serve static frontend (SPA)
+    # SPA logic
     handle {
         try_files {path} /index.html
         file_server
