--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -32,22 +32,9 @@ http://bemypcp.com {
 # ================================================================
 https://pagemdemr.com, https://bemypcp.com {
     root * /usr/share/caddy
+
+    # Performance: Enable compression
     encode zstd gzip
-
-    # Performance: Cache static assets
-    @assets {
-        path /assets/*
-    }
-    header @assets Cache-Control "public, max-age=31536000, immutable"
-
-    # API and Uploads
-    handle /api/* {
-        reverse_proxy api:3000
-    }
-    handle /uploads/* {
-        header Cache-Control "private, max-age=3600"
-        reverse_proxy api:3000
-    }
 
     # Security headers
     header {
@@ -61,7 +48,23 @@ https://pagemdemr.com, https://bemypcp.com {
         -Server
     }
 
-    # SPA logic
+    # API reverse proxy
+    handle /api/* {
+        reverse_proxy api:3000 {
+            header_up X-Real-IP {remote_host}
+            header_up Host {host}
+        }
+    }
+
+    # Uploads
+    handle /uploads/* {
+        reverse_proxy api:3000 {
+            header_up X-Real-IP {remote_host}
+            header_up Host {host}
+        }
+    }
+
+    # Serve static frontend (SPA)
     handle {
         try_files {path} /index.html
         file_server
@@ -82,8 +85,6 @@ https://pagemdemr.com, https://bemypcp.com {
 # ================================================================
 
 # Redirect admin.pagemdemr.com to main site path (or invalid if not needed)
-# Previously we redirected admin to proper place.
-# Let's keep admin.pagemdemr.com redirecting to the platform login path for convenience
 http://admin.pagemdemr.com, https://admin.pagemdemr.com {
     redir https://pagemdemr.com/platform-admin/login permanent
 }
