Fix deployment: Add web service and static copy

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -87,6 +87,18 @@ services:
       timeout: 10s
       retries: 3
 
+  web:
+    build:
+      context: ../client
+      dockerfile: ../deploy/Dockerfile.web
+      args:
+        BUILDKIT_INLINE_CACHE: 1
+    image: deploy-web:latest
+    container_name: emr-web
+    restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+
   caddy:
     image: caddy:2-alpine
     container_name: emr-caddy
