--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -89,7 +89,7 @@ http://tablet.pagemdemr.com {
 }
 
 https://tablet.pagemdemr.com {
-    root * /home/ubuntu/emr/tablet-ui
+    root * /usr/share/tablet
 
     # Performance: Enable compression
     encode zstd gzip
