--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -115,6 +115,7 @@ services:
       - caddy_data:/data
       - caddy_config:/config
       - ./static:/usr/share/caddy:ro
+      - ../tablet-ui:/usr/share/tablet:ro
     networks:
       - emr-network
     depends_on:
