--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -42,7 +42,7 @@ https://pagemdemr.com, https://bemypcp.com {
         X-Content-Type-Options "nosniff"
         X-XSS-Protection "1; mode=block"
         X-Frame-Options "DENY"
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://bemypcp.com; frame-ancestors 'none';"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://bemypcp.com https://api.fda.gov https://rxnav.nlm.nih.gov; frame-ancestors 'none';"
         Referrer-Policy "strict-origin-when-cross-origin"
         Permissions-Policy "geolocation=(), microphone=(), camera=(self)"
         -Server
@@ -62,6 +62,14 @@ https://pagemdemr.com, https://bemypcp.com {
             header_up X-Real-IP {remote_host}
             header_up Host {host}
         }
+    }
+
+    # Serve index.html with NO CACHE to ensure updates are seen immediately
+    handle /index.html {
+        header Cache-Control "no-cache, no-store, must-revalidate"
+        header Pragma "no-cache"
+        header Expires "0"
+        file_server
     }
 
     # Serve static frontend (SPA)
