deploy: add patient portal migration and environment configuration to deployment pipeline

--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -135,6 +135,12 @@ DOSESPOT_WEBHOOK_SECRET=CHANGE_ME_WEBHOOK_SECRET
 EPRESCRIBE_EPCS_ENABLED=false
 
 # ============================================
+# Patient Portal
+# ============================================
+PATIENT_PORTAL_ENABLED=true
+PORTAL_URL=https://pagemdemr.com/portal
+
+# ============================================
 # Notes
 # ============================================
 # 1. Generate strong secrets using:
