--- a/deploy/nginx-pm2.conf
+++ b/deploy/nginx-pm2.conf
@@ -10,7 +10,7 @@ upstream emr_api {
 server {
     listen 80;
     listen [::]:80;
-    server_name bemypcp.com www.bemypcp.com;
+    server_name pagemdemr.com www.pagemdemr.com;
     
     # Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
@@ -26,11 +26,11 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name bemypcp.com www.bemypcp.com;
+    server_name pagemdemr.com www.pagemdemr.com;
 
     # SSL certificates (managed by certbot)
-    ssl_certificate /etc/letsencrypt/live/bemypcp.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bemypcp.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/pagemdemr.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pagemdemr.com/privkey.pem;
     
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -45,7 +45,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Frame-Options "DENY" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://bemypcp.com; frame-ancestors 'none';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://pagemdemr.com; frame-ancestors 'none';" always;
 
     # Logging
     access_log /var/log/nginx/emr-access.log;
