fix: add PATIENT_PORTAL_ENABLED env var to docker-compose API service

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -71,6 +71,9 @@ services:
       DOSESPOT_CLINIC_ID: ${DOSESPOT_CLINIC_ID:-}
       DOSESPOT_WEBHOOK_SECRET: ${DOSESPOT_WEBHOOK_SECRET:-}
       EPRESCRIBE_EPCS_ENABLED: ${EPRESCRIBE_EPCS_ENABLED:-false}
+      # Patient Portal
+      PATIENT_PORTAL_ENABLED: ${PATIENT_PORTAL_ENABLED:-false}
+      PORTAL_URL: ${PORTAL_URL:-}
       # Platform Admin
       SUPER_ADMIN_SECRET: ${SUPER_ADMIN_SECRET}
     depends_on:
