feat: production-ready patient portal (SMTP, premium UI, invite modal)

--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -104,13 +104,15 @@ FRONTEND_URL=https://pagemdemr.com
 CORS_ORIGIN=https://pagemdemr.com
 
 # ============================================
-# Email Configuration (if needed)
+# Email Configuration (SMTP)
 # ============================================
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASS=your-app-password
-# SMTP_FROM=noreply@yourdomain.com
+EMAIL_ENABLED=false
+EMAIL_FROM=noreply@pagemdemr.com
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-user
+SMTP_PASS=your-password
+SMTP_SECURE=false
 
 # ============================================
 # Monitoring (optional)
