--- a/deploy/env.prod.example
+++ b/deploy/env.prod.example
@@ -104,15 +104,17 @@ FRONTEND_URL=https://pagemdemr.com
 CORS_ORIGIN=https://pagemdemr.com
 
 # ============================================
-# Email Configuration (SMTP)
+# Email Configuration (SMTP) - Using AWS SES
 # ============================================
-EMAIL_ENABLED=false
+EMAIL_ENABLED=true
 EMAIL_FROM=noreply@pagemdemr.com
-SMTP_HOST=smtp.example.com
+SMTP_HOST=email-smtp.us-east-1.amazonaws.com
 SMTP_PORT=587
-SMTP_USER=your-user
-SMTP_PASS=your-password
+SMTP_USER=YOUR_SES_ACCESS_KEY
+SMTP_PASS=YOUR_SES_SMTP_PASSWORD
 SMTP_SECURE=false
+# ^ Set SMTP_SECURE=false for port 587 (STARTTLS)
+#   Set SMTP_SECURE=true for port 465 (SSL/TLS)
 
 # ============================================
 # Monitoring (optional)
