--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -13,8 +13,8 @@ RUN npm install --prefer-offline --no-audit --silent || npm install --no-audit -
 # Copy source code
 COPY . ./
 
-# Build production bundle
-RUN npm run build
+# Build production bundle with restricted memory to avoid server swapping
+RUN NODE_OPTIONS="--max-old-space-size=768" npm run build
 
 # Production stage - serve with Caddy
 FROM caddy:2-alpine
