Fix appointment workflow: deny updates status, slots in appointments not messages, auto-accept

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -109,6 +109,8 @@ services:
     restart: unless-stopped
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
+    networks:
+      - emr-network
 
   caddy:
     image: caddy:2-alpine
