--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.30.0",
     "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.294.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.2",
