Add DAILY_API_KEY to docker-compose environment

--- a/deploy/docker-compose.prod.yml
+++ b/deploy/docker-compose.prod.yml
@@ -84,6 +84,8 @@ services:
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
       SMTP_SECURE: ${SMTP_SECURE:-false}
+      # Telehealth (Daily.co)
+      DAILY_API_KEY: ${DAILY_API_KEY:-}
     depends_on:
       db:
         condition: service_healthy
