--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -32,10 +32,10 @@ https://pagemdemr.com {
         Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
         X-Content-Type-Options "nosniff"
         X-XSS-Protection "1; mode=block"
-        X-Frame-Options "DENY"
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://api.fda.gov https://rxnav.nlm.nih.gov https://clinicaltables.nlm.nih.gov; frame-ancestors 'none';"
+        X-Frame-Options "SAMEORIGIN"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.daily.co https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' blob: data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' blob: https://pagemdemr.com https://api.fda.gov https://rxnav.nlm.nih.gov https://clinicaltables.nlm.nih.gov https://*.daily.co wss://*.daily.co https://unpkg.com; frame-src 'self' https://*.daily.co; frame-ancestors 'self'; media-src 'self' blob: https://*.daily.co;"
         Referrer-Policy "strict-origin-when-cross-origin"
-        Permissions-Policy "geolocation=(), microphone=(), camera=(self)"
+        Permissions-Policy "geolocation=(), microphone=(self), camera=(self)"
         -Server
     }
 
